# rocket-app

./: Aula 06 Rocket IA.rs  Cargo.toml
src/: main.rs
